# claude_research

./: .gitignore  DEPLOYMENT.md  mvp_design.md  pyproject.toml  research.ipynb  research_report.md  run_live.py
.claude/commands/: solve.md
deep_research/: __init__.py  agent.py  config.py  events.py  graph.py  state.py
deep_research/nodes/: __init__.py  clarifier.py  planner.py  query_gen.py  reflection.py  researcher.py  writer.py
deep_research/prompts/: __init__.py  clarifier.py  planner.py  reflection.py  writer.py
deep_research/providers/: __init__.py  base.py  duckduckgo.py  mock.py  tavily.py
deep_research/utils/: __init__.py  citations.py  compression.py  structured_output.py
tests/: conftest.py  test_step1_scaffold.py  test_step2_providers.py  test_step3_researcher.py  test_step4_reflection.py  test_step5_writer.py  test_step6_clarifier_planner.py  test_step7_hitl.py
web/: app.py
web/static/: index.html
