[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research"
version = "0.1.0"
description = "Interactive deep research agent library"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.28",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "duckduckgo-search>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
tavily = ["tavily-python>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_research*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
